[package]
name = "rust-by-example"
version = "0.1.0"
authors = ["zhiluniao <huangshunle_gxu@163.com>"]
edition = "2018"

[dependencies]
rand = "0.7"
regex = "1"
lazy_static = "1.4.0"
chrono = "0.4"
rust-crypto = "^0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc-serialize = "0.3"
qrcode = "0.11"
image = "0.23"
rayon = "1.3.0"
futures = { version =  "0.3.15", features = ["thread-pool"]}
itertools = "0.9.0"
crossbeam = "0.8"
crossbeam-channel = "0.5.0"
derive-new = "0.5"
ring = "0.16.20"
data-encoding = "2.3.2" 
percent-encoding = "2.1.0"
url = "2.2.1"
base64 = "0.13.0"
toml = "0.5.8"
num = "0.4.0"
libsm = "0.4.0"
stopwatch = "0.0.7"
