[package]
name = "rust-by-example"
version = "0.1.0"
authors = ["zhiluniao <huangshunle_gxu@163.com>"]
edition = "2018"

exclude = [
    "examples/*",
    "tests/*",
]

[dependencies]
rand = "0.7"
regex = "1"
lazy_static = "1.4.0"
chrono = "0.4"
rust-crypto = "^0.2"
aes-gcm = "0.9.4"
chacha20poly1305 = "0.9.0"
hex-literal = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc-serialize = "0.3"
qrcode = "0.11"
rayon = "1.3.0"
futures = { version =  "0.3.15", features = ["thread-pool"]}
itertools = "0.9.0"
crossbeam = "0.8"
crossbeam-channel = "0.5.0"
derive-new = "0.5"
ring = "0.16.20"
data-encoding = "2.3.2" 
percent-encoding = "2.1.0"
url = "2.2.1"
base64 = "0.13.0"
toml = "0.5.8"
num = "0.4.0"
libsm = "0.4.0"
stopwatch = "0.0.7"
pin-utils = "0.1.0"
hamcrest = "0.1.5"
anyhow = "1.0"
memmap = "0.7.0"
walkdir = "2"
num_cpus = "1.13.1"
threadpool = "1.0"
error-chain = "0.12.4"
rust-s3 = "0.28"
tokio = { version = "1", features = ["full"] }
image = "0.24.3"
zstd = "0.11.2"
